# django-template-2025

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.husky/: pre-commit
core/: asgi.py  consumers.py  settings.py  urls.py
core/extended_settings/: database.py  huey.py
